Nav now shows correct/dynamic points (still need to hook up level name) and user name Added support to show/stow the bar -- note to Sergio, search for state.updateVisibility in the file, there are two places where it needs to be called (commented out) Clicking outside the section on the tour no longer closes the section

--- a/public/browserapp/css/src/generic.less
+++ b/public/browserapp/css/src/generic.less
@@ -355,6 +355,28 @@
 			height: 13px;
 		}
 	}
+
+	&.sayso-app-container-stowed {
+		width: 40px;
+
+		#sayso-app-background {
+			display: none;
+		}
+
+		#sayso-app {
+			width: 35px;
+			margin: 0 0 0 5px;
+		}
+
+		.sayso-nav-box {
+			display: none;
+
+			&#sayso-nav-logo-container {
+				display: block;
+				width: 35px;
+			}
+		}
+	}
 }
 
 #sayso-section-container {
